--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
@@ -8,12 +8,11 @@
 
 <link href="~/Content/table/bootstrap-table.min.css" rel="stylesheet" />
 <link href="~/Content/table/placeholder-loading.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<link href="~/assets/fontawesome.css" rel="stylesheet" />
+<link href="~/Scripts/select2.css" rel="stylesheet" />
+<script src="~/Scripts/select2.min.js"></script>
+<script src="~/Scripts/tippy/popper.min.js"></script>
+<script src="~/assets/sweetalert/sweetalert.js"></script>
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 
 <style>
