--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -8,7 +8,6 @@
     <title>Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
-    <link href="\assets\boxicons-2.1.2\css\boxicons.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
@@ -17,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />
     <link href="~/Scripts/floating-labels.min.css" rel="stylesheet" />
-    <link href="~/Scripts/bootstrap-icon.css" rel="stylesheet" />
+    <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link href="~/Scripts/select2.css" rel="stylesheet" />
     <link href="~/assets/vendor/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/assets/vendor/css/Chart.css" rel="stylesheet" />
@@ -35,7 +34,6 @@
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
     <script src="~/assets/sweetalert/sweetalert.js"></script>
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
     <script src="~/Scripts/fuse.js"></script>
     <style>
         .bootstrap-table .table > tbody > tr.group-by.expanded,
@@ -46,7 +44,145 @@
         .bootstrap-table .table > tbody > tr.hidden {
             display: none;
         }
-        .ph-item{background-color:#fff;border:1px solid #e6e6e6;border-radius:2px;direction:ltr;display:flex;flex-wrap:wrap;margin-bottom:30px;overflow:hidden;padding:30px 15px 15px;position:relative}.ph-item,.ph-item *,.ph-item :after,.ph-item :before{box-sizing:border-box}.ph-item:before{-webkit-animation:ph-animation .8s linear infinite;animation:ph-animation .8s linear infinite;background:linear-gradient(90deg,hsla(0,0%,100%,0) 46%,hsla(0,0%,100%,.35) 50%,hsla(0,0%,100%,0) 54%) 50% 50%;bottom:0;content:" ";left:50%;margin-left:-250%;pointer-events:none;position:absolute;right:0;top:0;width:500%;z-index:1}.ph-item>*{display:flex;flex:1 1 auto;flex-flow:column;margin-bottom:15px;padding-left:15px;padding-right:15px}.ph-row{display:flex;flex-wrap:wrap;margin-top:-7.5px}.ph-row div{background-color:#ced4da;height:10px;margin-top:7.5px}.ph-row .big,.ph-row.big div{height:20px}.ph-row .empty{background-color:hsla(0,0%,100%,0)}.ph-col-2{flex:0 0 16.6666666667%}.ph-col-4{flex:0 0 33.3333333333%}.ph-col-6{flex:0 0 50%}.ph-col-8{flex:0 0 66.6666666667%}.ph-col-10{flex:0 0 83.3333333333%}.ph-col-12{flex:0 0 100%}[class*=ph-col]{direction:ltr}[class*=ph-col]>*+.ph-row{margin-top:0}[class*=ph-col]>*+*{margin-top:7.5px}.ph-avatar{background-color:#ced4da;border-radius:50%;min-width:60px;overflow:hidden;position:relative;width:100%}.ph-avatar:before{content:" ";display:block;padding-top:100%}.ph-picture{background-color:#ced4da;height:120px;width:100%}@@-webkit-keyframes ph-animation{0%{transform:translate3d(-30%,0,0)}to{transform:translate3d(30%,0,0)}}@@keyframes ph-animation{0%{transform:translate3d(-30%,0,0)}to{transform:translate3d(30%,0,0)}}
+
+        .ph-item {
+            background-color: #fff;
+            border: 1px solid #e6e6e6;
+            border-radius: 2px;
+            direction: ltr;
+            display: flex;
+            flex-wrap: wrap;
+            margin-bottom: 30px;
+            overflow: hidden;
+            padding: 30px 15px 15px;
+            position: relative
+        }
+
+            .ph-item, .ph-item *, .ph-item :after, .ph-item :before {
+                box-sizing: border-box
+            }
+
+                .ph-item:before {
+                    -webkit-animation: ph-animation .8s linear infinite;
+                    animation: ph-animation .8s linear infinite;
+                    background: linear-gradient(90deg,hsla(0,0%,100%,0) 46%,hsla(0,0%,100%,.35) 50%,hsla(0,0%,100%,0) 54%) 50% 50%;
+                    bottom: 0;
+                    content: " ";
+                    left: 50%;
+                    margin-left: -250%;
+                    pointer-events: none;
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    width: 500%;
+                    z-index: 1
+                }
+
+                .ph-item > * {
+                    display: flex;
+                    flex: 1 1 auto;
+                    flex-flow: column;
+                    margin-bottom: 15px;
+                    padding-left: 15px;
+                    padding-right: 15px
+                }
+
+        .ph-row {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: -7.5px
+        }
+
+            .ph-row div {
+                background-color: #ced4da;
+                height: 10px;
+                margin-top: 7.5px
+            }
+
+            .ph-row .big, .ph-row.big div {
+                height: 20px
+            }
+
+            .ph-row .empty {
+                background-color: hsla(0,0%,100%,0)
+            }
+
+        .ph-col-2 {
+            flex: 0 0 16.6666666667%
+        }
+
+        .ph-col-4 {
+            flex: 0 0 33.3333333333%
+        }
+
+        .ph-col-6 {
+            flex: 0 0 50%
+        }
+
+        .ph-col-8 {
+            flex: 0 0 66.6666666667%
+        }
+
+        .ph-col-10 {
+            flex: 0 0 83.3333333333%
+        }
+
+        .ph-col-12 {
+            flex: 0 0 100%
+        }
+
+        [class*=ph-col] {
+            direction: ltr
+        }
+
+            [class*=ph-col] > * + .ph-row {
+                margin-top: 0
+            }
+
+            [class*=ph-col] > * + * {
+                margin-top: 7.5px
+            }
+
+        .ph-avatar {
+            background-color: #ced4da;
+            border-radius: 50%;
+            min-width: 60px;
+            overflow: hidden;
+            position: relative;
+            width: 100%
+        }
+
+            .ph-avatar:before {
+                content: " ";
+                display: block;
+                padding-top: 100%
+            }
+
+        .ph-picture {
+            background-color: #ced4da;
+            height: 120px;
+            width: 100%
+        }
+
+        @@-webkit-keyframes ph-animation {
+            0% {
+                transform: translate3d(-30%,0,0)
+            }
+
+            to {
+                transform: translate3d(30%,0,0)
+            }
+        }
+
+        @@keyframes ph-animation {
+            0% {
+                transform: translate3d(-30%,0,0)
+            }
+
+            to {
+                transform: translate3d(30%,0,0)
+            }
+        }
     </style>
     <script>
         $(function () {
