--- a/NOVA/Views/Shared/_Layout_isemri.cshtml
+++ b/NOVA/Views/Shared/_Layout_isemri.cshtml
@@ -34,6 +34,9 @@
     <!-- Icons. Uncomment required icon fonts -->
     <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-table-master/dist/bootstrap-table.min.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-table-master/dist/extensions/sticky-header/bootstrap-table-sticky-header.css" rel="stylesheet" />
+    <script src="~/Scripts/sweetAlert.js"></script>
+    
 
     <style>
         .bootstrap-table .table > tbody > tr.group-by.expanded,
@@ -219,10 +222,10 @@
                                     '<li data-page="' +
                                     i +
                                     '">\
-                                                                                                                                                                                      <span>' +
+                                                                                                                                                                                                                          <span>' +
                                     i++ +
                                     '<span class="sr-only">(current)</span></span>\
-                                                                                                                                                                                    </li>'
+                                                                                                                                                                                                                        </li>'
                                 )
                                 .show();
                         } // end for i
@@ -312,19 +315,16 @@
         </script>*@
 
     @RenderSection("scripts", required: false)
-
-
-    <script src="~/Scripts/tableExport.min.js"></script>
+    <script src="~/assets/vendor/libs/popper/popper.js"></script>
     <script src="~/Content/bootstrap-table-master/dist/bootstrap-table.min.js"></script>
-    <script src="~/Scripts/tableLocale.js"></script>
-    <script src="~/Scripts/table-filter.min.js"></script>
-    <script src="~/Scripts/table-mobile.js"></script>
-    <script src="~/Scripts/table-sticky-header.js"></script>
-    <script src="~/Scripts/table-fixed.js"></script>
-    <script src="~/Scripts/tablednd.min.js"></script>
-    <script src="~/Scripts/table-reorder-rows.min.js"></script>
-    <script src="~/Scripts/table-groupby.min.js"></script>
-
+    <script src="~/Content/bootstrap-table-master/dist/extensions/export/bootstrap-table-export.min.js"></script>
+    <script src="~/Content/bootstrap-table-master/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+    <script src="~/Content/bootstrap-table-master/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
+    <script src="~/Content/bootstrap-table-master/dist/extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
+    <script src="~/Content/bootstrap-table-master/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.js"></script>
+    <script src="~/Content/bootstrap-table-master/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.js"></script>
+    <script src="~/Content/bootstrap-table-master/dist/extensions/group-by-v2/bootstrap-table-group-by.min.js"></script>
+    <script src="~/Content/bootstrap-table-master/dist/locale/bootstrap-table-tr-TR.min.js"></script>
 </body>
 
 </html>
