--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -10,6 +10,9 @@
     <!--========== CSS ==========-->
 
     <style>
+        #navbar{
+            z-index:900 !important;
+        }
         .dot {
             height: 10px;
             width: 10px;
